--- a/gift/index.html
+++ b/gift/index.html
@@ -4,15 +4,15 @@
 <head>
     <title>抽奖</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <link rel="stylesheet" href="https://unpkg.com/muse-ui/dist/muse-ui.css">
+    <link rel="stylesheet" href="https://unpkg.zhimg.com/muse-ui/dist/muse-ui.css">
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
-    <script src="https://unpkg.com/muse-ui/dist/muse-ui.js"></script>
+    <script src="https://unpkg.zhimg.com/muse-ui/dist/muse-ui.js"></script>
     <link rel="stylesheet" href="https://cdn.bootcss.com/material-design-icons/3.0.1/iconfont/material-icons.css">
     <script src="static/js/bmob.min.js"></script>
-    <link rel="stylesheet" href="https://unpkg.com/muse-ui-toast/dist/muse-ui-toast.all.css" />
-    <script src="https://unpkg.com/muse-ui-toast/dist/muse-ui-toast.js"></script>
-    <link rel="stylesheet" href="https://unpkg.com/muse-ui-loading/dist/muse-ui-loading.all.css" />
-    <script src="https://unpkg.com/muse-ui-loading/dist/muse-ui-loading.js"></script>
+    <link rel="stylesheet" href="https://unpkg.zhimg.com/muse-ui-toast/dist/muse-ui-toast.all.css" />
+    <script src="https://unpkg.zhimg.com/muse-ui-toast/dist/muse-ui-toast.js"></script>
+    <link rel="stylesheet" href="https://unpkg.zhimg.com/muse-ui-loading/dist/muse-ui-loading.all.css" />
+    <script src="https://unpkg.zhimg.com/muse-ui-loading/dist/muse-ui-loading.js"></script>
     <link rel="stylesheet" href="static/css/style.css" />
 </head>
 
