--- a/gift/admin.html
+++ b/gift/admin.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>竞争榜</title>
+    <title>抽奖系统后台</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <link rel="stylesheet" href="https://unpkg.com/muse-ui/dist/muse-ui.css">
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
