--- a/TiebaLite/index.html
+++ b/TiebaLite/index.html
@@ -6,11 +6,11 @@
     <link rel="shortcut icon" href="favicon.ico">
     <meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>贴吧 Lite | 极简贴吧客户端</title>
-    <link rel="stylesheet" href="https://unpkg.zhimg.com/muse-ui/dist/muse-ui.css">
+    <link rel="stylesheet" href="https://unpkg.com/muse-ui/dist/muse-ui.css">
     <link rel="stylesheet" href="https://cdn.bootcss.com/material-design-icons/3.0.1/iconfont/material-icons.css">
     <link rel="stylesheet" href="static/css/style.css">
     <script src="https://cdn.bootcss.com/vue/2.6.4/vue.min.js"></script>
-    <script src="https://unpkg.zhimg.com/muse-ui/dist/muse-ui.js"></script>
+    <script src="https://unpkg.com/muse-ui/dist/muse-ui.js"></script>
     <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
 </head>
 
