修改标题及素材

--- a/Games/SyntheticMiPhones/index.html
+++ b/Games/SyntheticMiPhones/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
 
     <!-- 微信搜索公众号『 程序员鱼皮 』，学习编程技术，发现更多好玩的项目！ -->
-    <title>合成大西瓜</title>
+    <title>合成小米机</title>
 
     <!--http://www.html5rocks.com/en/mobile/mobifying/-->
     <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1, minimum-scale=1,maximum-scale=1" />
@@ -113,23 +113,10 @@
         judgeLanTitle();
 
         function judgeLanTitle() {
-
-            //        console.log("window.navigator.language",window.navigator.language);
-
             if (window.navigator.language == "zh-CN" || window.navigator.language == "zh-cn") {
-                document.title = "小游戏：合成大西瓜";
-            } else if (window.navigator.language == "zh-TW") {
-                document.title = "小遊戲：合成大西瓜";
-            } else if (window.navigator.language == "zh-HK") {
-                document.title = "小遊戲：合成大西瓜";
-            } else if (window.navigator.language == "ko-KR") {
-                document.title = "작은 놀이：큰 수박 을 합성 하 다";
-            } else if (window.navigator.language == "ja-JP") {
-                document.title = "ミニゲーム：合成スイカ";
-            } else if (window.navigator.language == "th-TH") {
-                document.title = "เกมเล็กๆ：แตงโมสังเคราะห์";
+                document.title = "合成小米机";
             } else {
-                document.title = "Little game：Synthetic watermelon";
+                document.title = "Synthetic Xiaomi phones";
             }
 
 
